--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -204,7 +204,6 @@ section.success {
 #portfolio .portfolio-item .portfolio-link {
   display: block;
   position: relative;
-  max-width: 400px;
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
@@ -219,8 +218,8 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-caption {
-  max-width: 400px;
-  margin: 0 auto;
+  width: 100%;
+  height: 125px;
   background-color: white;
   text-align: center;
   padding: 25px;
